@@ -1,6 +1,6 @@
 package com.pgl.energenius.config;
 
-import com.pgl.energenius.Services.ClientLoginService;
+import com.pgl.energenius.Services.UserService;
 import java.util.Arrays;
 import java.util.List;
 
@@ -8,12 +8,12 @@ import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpHeaders;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
-import org.springframework.security.config.annotation.web.configuration.WebSecurityConfiguration;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -32,7 +32,7 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 public class WebSecurityConfig {
 
     @Autowired
-    private ClientLoginService clientLoginService;
+    private UserService userDetailsService;
 
     @Autowired
     private JwtFilter jwtFilter;
@@ -47,7 +47,7 @@ public class WebSecurityConfig {
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
 
         return http.csrf().disable()
-//                .cors().disable()
+                //.cors().disable()
                 .cors(Customizer.withDefaults())
                 .sessionManagement()
                 .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
@@ -59,7 +59,7 @@ public class WebSecurityConfig {
                 .and()
 
                 .authorizeHttpRequests()
-                .requestMatchers("/api/client/auth/**").permitAll()
+                .requestMatchers("/api/client/auth/**", "/api/employee/auth/**").permitAll()
                 .anyRequest().authenticated()
                 .and()
 
@@ -74,7 +74,7 @@ public class WebSecurityConfig {
     @Bean
     public AuthenticationProvider authProvider() {
         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
-        authProvider.setUserDetailsService(clientLoginService);
+        authProvider.setUserDetailsService(userDetailsService);
         authProvider.setPasswordEncoder(passwordEncoder());
         return authProvider;
     }
@@ -95,9 +95,11 @@ public class WebSecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource(){
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000"));
+        //configuration.addExposedHeader("Authorization");
+        configuration.addExposedHeader(HttpHeaders.AUTHORIZATION);
+        configuration.setAllowedOrigins(List.of("http://localhost:3000"));
         configuration.setAllowedMethods(Arrays.asList("GET", "OPTIONS", "POST"));
-        configuration.setAllowedHeaders(List.of("Content-Type", "Access-Control-Allow-Origin"));
+        configuration.setAllowedHeaders(List.of("Content-Type","Authorization", "Access-Control-Allow-Origin"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
